styles/style.css
* {
  /* outline: 1px dotted gray; */
}

/* -------- common -------- */

.container {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 50px;
  padding-right: 50px;
}

.overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0, 0, 0, 0.6);
}

/* -------- header -------- */

.header {
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  align-items: center;
  padding-bottom: 90px;
  padding-top: 90px;
}

.header__links-list {
  display: flex;
  align-items: baseline;
  gap: 32px;
}

.header__links-list-item {
  position: relative;
  border-bottom: 1px solid #000;
  list-style-type: none;
}

.header__links-list-item::before {
  content: "○";
  position: absolute;
  left: -20px;
  top: 0;
  font-size: 20px;
}

.header__links-list-item:last-child {
  padding-right: 0;
}

.header__link_active {
  border-bottom: none;
}

.header__links-list-item_no-bullit::before {
  content: "";
}

.header__link {
  font-size: 18px;
  text-decoration: none;
}

.header__logo {
  display: block;
  align-self: center;
  justify-self: center;
  width: 137px;
  padding-top: 2px;
  /* TODO: Как избавиться от жёсткого width? firefox и chrome min-width воспринимают по-разному */
}

.header__address {
  justify-self: end;
}

/* -------- address ------- */

.address a,
.address span {
  display: block;
}

.address {
  font-size: 18px;
  font-style: normal;
  line-height: 24px;
}

/* --------- cover -------- */

.cover {
  position: relative;
  margin-bottom: 180px;
  padding-bottom: 50px;
  padding-top: 165px;
  background-color: #27194c;
  background-image: url(../images/cover.jpg);
  color: #fff;
}

.cover__title {
  display: flex;
  flex-direction: column;
  position: relative;
  margin-bottom: 121px;
  font-size: 100px;
  font-weight: 700;
  text-transform: uppercase;
  line-height: 122px;
  letter-spacing: 3px;
}

.aligned-text_center {
  align-self: center;
  margin-right: 56px;
}

.aligned-text_end {
  align-self: end;
}

.letter-spacing-extended {
  letter-spacing: 35px;
}

.no-letter-spacing {
  letter-spacing: normal;
}

.cover__text_widen {
  letter-spacing: 54px;
}

.cover__description {
  display: flex;
  align-items: center;
  justify-content: right;
  position: relative;
  color: #fff;
  gap: 79px;
}

.cover__description-text {
  word-spacing: 17px;
}

.word-spacing-extended {
  word-spacing: 22px;
}

.cover__description-text,
.bet-button {
  font-size: 22px;
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
  color: inherit;
  line-height: 28px;
}

.bet-button {
  padding: 12px 32px;
  border: 1px solid #fff;
  background-color: transparent;
  font-family: Raleway, sans-serif;
  cursor: pointer;
}

/* --------- lots --------- */

.lots {
  margin-bottom: 180px;
}

.lots__heading {
  padding-bottom: 27px;
  padding-left: 40px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 33px;
  gap: 25px;
}

.lots__card-link {
  text-decoration: none;
}

.lots__card-list-item {
  flex-basis: 430px;
  flex-grow: 1;
  min-height: 450px;
  list-style: none;
}

.lots__look-more-link {
  padding-left: 40px;
  font-size: 20px;
  font-weight: 400;
  color: #000;
}

/* --------- card --------- */

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
  height: 100%;
  padding: 50px 40px;
  background-size: cover;
  color: #fff;
  background-color: #27194c;
}

.card_type_film {
  background-image: url(../images/card-lot-01.jpg);
}

.card_type_book {
  background-image: url(../images/card-lot-02.jpg);
}

.card_type_picture {
  background-image: url(../images/card-lot-03.jpg);
}

.card__title {
  position: relative;
  z-index: 2;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
}

.card__text {
  position: relative;
  z-index: 2;
  font-size: 20px;
  font-weight: 400;
}

/* --------- about -------- */

.about {
  display: flex;
  margin-bottom: 182px;
  gap: 25px;
}

.about__title {
  padding-bottom: 100px;
  padding-top: 100px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.about__text {
  padding-bottom: 25px;
  font-size: 20px;
  font-weight: 400;
}

.about__text:last-child {
  padding-bottom: 0;
}

.about__logo {
  display: block;
  width: 240px;
  height: 240px;
  margin-left: 95px;
  margin-right: 95px;
  padding: 63px 46px 63px 46px;
  border-radius: 50%;
  background-color: #000;
}

/* -------- footer -------- */

.footer {
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  margin-bottom: 90px;
}

.footer__menu {
  text-align: center;
}

.footer__menu-list {
  list-style: none;
}

.footer__menu-link {
  font-size: 18px;
  font-weight: 400;
}

.footer__social-list {
  display: flex;
  align-self: flex-start;
  justify-self: end;
  gap: 48px;
  list-style: none;
}

.footer__social-link {
  display: block;
  width: 48px;
  /* TODO: Как избавиться от жёсткого width? firefox и chrome min-width воспринимают по-разному */
}

